# genesis

./: .genesis-manifest.json  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  x86_64-genesis.json
content/blog-posts/: DRAFT_as-the-kernel-turns-agent-journals.md  DRAFT_protection-tiers-ai-governance.md  PUBLISH_bot-to-builder.md
docs/: AGENT_FIRST_BOOT_DESIGN.md  AGENT_FIRST_BOOT_IMPLEMENTATION.md  AI_FONT_GENERATION.md  ARCHIMEDES_IMPLEMENTATION_GUIDE.md  BEVY_AND_GRAPHICS.md  BOOT_SEQUENCE_DEBUG.md  BRIDGE_EXPLANATION.md  DAILY_AMBITION_INTEGRATION.md  DISPLAY_OPTIONS.md  END_OF_DAY_WEEK_VOICE_PREP.md  GENESIS_MILESTONES.md  INTERACTION_MODEL.md  ISSUES_AND_NEXT_STEPS.md  MEMORY_SYSTEM.md  MILESTONE_6_STATUS.md  PROGRESS_2026-01-24.md  PROMPT_4_AGENT_DECOMPOSITION.md  PROTECTION_TIERS.md  QEMU_DISPLAY_DEBUG.md  RESOLUTION_IMPROVEMENTS.md  TEST_PLAN.md  TEST_RESULTS.md  robot_spec.md  voice-reflection-implementation-guide (2).md
docs/history/: bot-to-builder.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  interrupts.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
kernel/src/agents/: archimedes.rs  message.rs  mod.rs  protection.rs  supervisor.rs  thomas.rs
kernel/src/agents/prompts/: academy.rs  characters.rs  evolution.rs  library.rs  mod.rs
kernel/src/gui/: console.rs  desktop.rs  fonts.rs  graphics.rs  mod.rs
kernel/src/storage/: filesystem.rs  memory_store.rs  mod.rs
lib/: gemini_vision.py  robot_bridge.py  vision.py
memory/: .gitignore  learnings.md
memory/state/: event_memory_persistence_verified_20260219_070231.json
sessions/2026/02/: 2026-02-19_bot-to-builder.md  (+2 more)
tools/: BRIDGE_README.md  genesis-bridge.py  genesis_memory_persist.py  qemu-debug.sh  qemu-run.sh  test-genesis.sh
(+5 files in other folders)
